--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="col-lg-12 text-center">
                 <div class="section-heading">
                     <h2 class="title">Вопросы-Ответы</h2>
-                    <p class="text-muted">Если ешё есть вопросы, свяжитесь с нами! <br> +375293481007</p>
+                    <p class="text-muted">Если ешё есть вопросы, свяжитесь с нами! <br><span style="font-family: 'Caveat', cursive; font-size: 27px">+375293481007</span></p>
                     <img src="img/sep.png" width="120">
                 </div>
             </div>
