--- a/index.html
+++ b/index.html
@@ -257,6 +257,28 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="large-12 columns">
+                <div class="owl-carousel owl-theme owl-animation" id="animated-thumbnials2">
+                    <div class="item" data-src="img/belexpo/animation(1).jpg"><img src="img/belexpo/animation(1).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(2).jpg"><img src="img/belexpo/animation(2).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(3).jpg"><img src="img/belexpo/animation(3).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(4).jpg"><img src="img/belexpo/animation(4).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(5).jpg"><img src="img/belexpo/animation(5).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(6).jpg"><img src="img/belexpo/animation(6).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(7).jpg"><img src="img/belexpo/animation(7).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(8).jpg"><img src="img/belexpo/animation(8).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(9).jpg"><img src="img/belexpo/animation(9).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(10).jpg"><img src="img/belexpo/animation(10).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(11).jpg"><img src="img/belexpo/animation(11).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(12).jpg"><img src="img/belexpo/animation(12).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(13).jpg"><img src="img/belexpo/animation(13).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(14).jpg"><img src="img/belexpo/animation(14).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(15).jpg"><img src="img/belexpo/animation(15).jpg" alt=""></div>
+                    <div class="item" data-src="img/belexpo/animation(16).jpg"><img src="img/belexpo/animation(16).jpg" alt=""></div>
+                </div>
+            </div>
+        </div>
     </div>
 <!--    <div class="overlay"></div>-->
 </section>
@@ -329,7 +351,7 @@
 <!--lightgallery-->
 <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.9/dist/js/lightgallery.min.js"></script>
- A jQuery plugin that adds cross-browser mouse wheel support. (Optional)
+<!-- A jQuery plugin that adds cross-browser mouse wheel support. (Optional)-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
 <!-- lightgallery plugins -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lg-thumbnail/1.1.0/lg-thumbnail.min.js"></script>
