--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="+375293481007 Развлечение анимация игры клоуны">
+    <meta name="description" content="+375293481007 Развлечение анимация игры клоуны театр варакас ананас">
     <meta name="author" content="Anton Glebov">
     <title>Детская анимация праздников</title>
 
+<!--    Preloader-->
+    <link rel="stylesheet" href="css/style.preloader.css">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -51,12 +53,32 @@
 
 <body id="page-top">
 
-<!--SNOW!!!-->
-<!--<div class="illustration">
-    <div class="i-large"></div>
-    <div class="i-medium"></div>
-    <div class="i-small"></div>
-</div>-->
+
+<div class='loader' id="loader">
+    <div class='loader_overlay'></div>
+    <div class='loader_cogs'>
+        <div class='loader_cogs__top'>
+            <div class='top_part'></div>
+            <div class='top_part'></div>
+            <div class='top_part'></div>
+            <div class='top_hole'></div>
+        </div>
+        <div class='loader_cogs__left'>
+            <div class='left_part'></div>
+            <div class='left_part'></div>
+            <div class='left_part'></div>
+            <div class='left_hole'></div>
+        </div>
+        <div class='loader_cogs__bottom'>
+            <div class='bottom_part'></div>
+            <div class='bottom_part'></div>
+            <div class='bottom_part'></div>
+            <div class='bottom_hole'></div>
+        </div>
+        <p>Загрузка...</p>
+    </div>
+</div>
+
 
 
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
