--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<!--    <link rel="manifest" href="manifest.json">-->
+    <!--    <link rel="manifest" href="manifest.json">-->
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#4ad3fa">
     <meta name="apple-mobile-web-app-title" content="#ffffff">
     <meta name="application-name" content="#ffffff">
@@ -25,7 +25,7 @@
     <meta name="author" content="Anton Glebov">
     <title>Детская анимация праздников</title>
 
-<!--    Preloader-->
+    <!--    Preloader-->
     <link rel="stylesheet" href="css/style.preloader.css">
 
     <!-- Bootstrap Core CSS -->
@@ -36,9 +36,11 @@
     <link href="https://fonts.googleapis.com/css?family=Muli|Great+Vibes|Marmelad" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
+    <!--<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
             integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <!--    OWL carousel-->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -78,7 +80,6 @@
         <p>Загрузка...</p>
     </div>
 </div>
-
 
 
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -146,9 +147,9 @@
         </div>
     </div>
     <div class="audioembed">
-        <audio controls="true" autoplay="true" src="audio.mp3" id="audio1">
-            <source src="audio.ogg" type="audio/ogg">
-            <source src="audio.mp3" type="audio/mpeg">
+        <audio controls="true" autoplay="true" id="audio1" preload="none">
+            <!--<source src="audio.ogg" type="audio/ogg">
+            <source src="audio.mp3" type="audio/mpeg">-->
         </audio>
     </div>
 </header>
@@ -181,7 +182,8 @@
             <div class="col-lg-12 text-center">
                 <div class="section-heading">
                     <h2 class="title">Вопросы-Ответы</h2>
-                    <p class="text-muted">Если ешё есть вопросы, свяжитесь с нами! <br><span style="font-family: 'Caveat', cursive; font-size: 27px">+375293481007</span></p>
+                    <p class="text-muted">Если ешё есть вопросы, свяжитесь с нами! <br><span
+                            style="font-family: 'Caveat', cursive; font-size: 27px">+375293481007</span></p>
                     <img src="img/sep.png" width="120">
                 </div>
             </div>
@@ -282,27 +284,43 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="owl-carousel owl-theme owl-animation" id="animated-thumbnials2">
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(1).jpg"><img src="img/belexpo/animation(1).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(2).jpg"><img src="img/belexpo/animation(2).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(3).jpg"><img src="img/belexpo/animation(3).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(4).jpg"><img src="img/belexpo/animation(4).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(5).jpg"><img src="img/belexpo/animation(5).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(6).jpg"><img src="img/belexpo/animation(6).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(7).jpg"><img src="img/belexpo/animation(7).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(8).jpg"><img src="img/belexpo/animation(8).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(9).jpg"><img src="img/belexpo/animation(9).jpg" alt=""></div>
-                    <div class="item" owl-lazy data-src="img/belexpo/animation(10).jpg"><img src="img/belexpo/animation(10).jpg" alt=""></div>
-                    <div class="item" owl-lazy data-src="img/belexpo/animation(11).jpg"><img src="img/belexpo/animation(11).jpg" alt=""></div>
-                    <div class="item" owl-lazy data-src="img/belexpo/animation(12).jpg"><img src="img/belexpo/animation(12).jpg" alt=""></div>
-                    <div class="item" owl-lazy data-src="img/belexpo/animation(13).jpg"><img src="img/belexpo/animation(13).jpg" alt=""></div>
-                    <div class="item" owl-lazy data-src="img/belexpo/animation(14).jpg"><img src="img/belexpo/animation(14).jpg" alt=""></div>
-                    <div class="item" owl-lazy data-src="img/belexpo/animation(15).jpg"><img src="img/belexpo/animation(15).jpg" alt=""></div>
-                    <div class="item" owl-lazy data-src="img/belexpo/animation(16).jpg"><img src="img/belexpo/animation(16).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(1).jpg"><img
+                            src="img/belexpo/animation(1).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(2).jpg"><img
+                            src="img/belexpo/animation(2).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(3).jpg"><img
+                            src="img/belexpo/animation(3).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(4).jpg"><img
+                            src="img/belexpo/animation(4).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(5).jpg"><img
+                            src="img/belexpo/animation(5).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(6).jpg"><img
+                            src="img/belexpo/animation(6).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(7).jpg"><img
+                            src="img/belexpo/animation(7).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(8).jpg"><img
+                            src="img/belexpo/animation(8).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(9).jpg"><img
+                            src="img/belexpo/animation(9).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(10).jpg"><img
+                            src="img/belexpo/animation(10).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(11).jpg"><img
+                            src="img/belexpo/animation(11).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(12).jpg"><img
+                            src="img/belexpo/animation(12).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(13).jpg"><img
+                            src="img/belexpo/animation(13).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(14).jpg"><img
+                            src="img/belexpo/animation(14).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(15).jpg"><img
+                            src="img/belexpo/animation(15).jpg" alt=""></div>
+                    <div class="item owl-lazy" data-src="img/belexpo/animation(16).jpg"><img
+                            src="img/belexpo/animation(16).jpg" alt=""></div>
                 </div>
             </div>
         </div>
     </div>
-<!--    <div class="overlay"></div>-->
+    <!--    <div class="overlay"></div>-->
 </section>
 
 <section id="contact">
