--- a/index.html
+++ b/index.html
@@ -262,60 +262,44 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="owl-carousel owl-theme" id="animated-thumbnials">
-                    <div class="item owl-lazy" data-src="img/owl1.jpg"><img src="img/owl1.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl2.jpg"><img src="img/owl2.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl3.jpg"><img src="img/owl3.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl4.jpg"><img src="img/owl4.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl5.jpg"><img src="img/owl5.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl6.jpg"><img src="img/owl6.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl7.jpg"><img src="img/owl7.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl8.jpg"><img src="img/owl8.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl9.jpg"><img src="img/owl9.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl10.jpg"><img src="img/owl10.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl11.jpg"><img src="img/owl11.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl12.jpg"><img src="img/owl12.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl13.jpg"><img src="img/owl13.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl14.jpg"><img src="img/owl14.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl15.jpg"><img src="img/owl15.jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/owl16.jpg"><img src="img/owl16.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl1.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl2.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl3.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl4.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl5.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl6.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl7.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl8.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl9.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl10.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl11.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl12.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl13.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl14.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl15.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl16.jpg" alt=""></div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="large-12 columns">
                 <div class="owl-carousel owl-theme owl-animation" id="animated-thumbnials2">
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(1).jpg"><img
-                            src="img/belexpo/animation(1).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(2).jpg"><img
-                            src="img/belexpo/animation(2).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(3).jpg"><img
-                            src="img/belexpo/animation(3).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(4).jpg"><img
-                            src="img/belexpo/animation(4).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(5).jpg"><img
-                            src="img/belexpo/animation(5).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(6).jpg"><img
-                            src="img/belexpo/animation(6).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(7).jpg"><img
-                            src="img/belexpo/animation(7).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(8).jpg"><img
-                            src="img/belexpo/animation(8).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(9).jpg"><img
-                            src="img/belexpo/animation(9).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(10).jpg"><img
-                            src="img/belexpo/animation(10).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(11).jpg"><img
-                            src="img/belexpo/animation(11).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(12).jpg"><img
-                            src="img/belexpo/animation(12).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(13).jpg"><img
-                            src="img/belexpo/animation(13).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(14).jpg"><img
-                            src="img/belexpo/animation(14).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(15).jpg"><img
-                            src="img/belexpo/animation(15).jpg" alt=""></div>
-                    <div class="item owl-lazy" data-src="img/belexpo/animation(16).jpg"><img
-                            src="img/belexpo/animation(16).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(1).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(2).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(3).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(4).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(5).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(6).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(7).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(8).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(9).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(10).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(11).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(12).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(13).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(14).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(15).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(16).jpg" alt=""></div>
                 </div>
             </div>
         </div>
