--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="+375293481007 Развлечение анимация игры клоуны театр варакас ананас">
+    <meta name="description" content="+375293481007 Развлечение анимация игры клоуны театр варакас ананас varakasananas varakas ananas Минск">
     <meta name="author" content="Anton Glebov">
-    <title>Детская анимация праздников</title>
+    <title>Детская анимация праздников Варакас Ананас</title>
 
     <!--    Preloader-->
     <link rel="stylesheet" href="css/style.preloader.css">
@@ -125,7 +125,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="device-container">
-                    <img class="img-responsive" src="img/ananas2.png">
+                    <img class="img-responsive" src="img/ananas2.png" alt="Аниматоры">
                 </div>
             </div>
             <div class="col-sm-6">
@@ -161,7 +161,7 @@
                 <h2 class="title section-heading">Специальное предложение</h2>
                 <p>Постаянным клиентам скидка</p>
                 <div class="coupon">
-                    <img src="img/gift.png">
+                    <img src="img/gift.png" alt="подарки">
                     <h3>10% скидка!</h3>
                     <h4>Код: <span style="border-bottom:1px dashed">TEATP</span></h4>
                     <br/>
@@ -184,7 +184,7 @@
                     <h2 class="title">Вопросы-Ответы</h2>
                     <p class="text-muted">Если ешё есть вопросы, свяжитесь с нами! <br><span
                             style="font-family: 'Caveat', cursive; font-size: 27px">+375293481007</span></p>
-                    <img src="img/sep.png" width="120">
+                    <img src="img/sep.png" width="120" alt="Весёлые мероприятия">
                 </div>
             </div>
         </div>
@@ -262,44 +262,44 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="owl-carousel owl-theme" id="animated-thumbnials">
-                    <div class="item"><img class="owl-lazy" data-src="img/owl1.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl2.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl3.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl4.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl5.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl6.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl7.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl8.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl9.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl10.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl11.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl12.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl13.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl14.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl15.jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl16.jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl1.jpg" alt="varakas ananas"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl2.jpg" alt="varakas-ananas"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl3.jpg" alt="Varakas Ananas"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl4.jpg" alt="ВаракасАнанас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl5.jpg" alt="Новый Год"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl6.jpg" alt="варакасананас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl7.jpg" alt="варакас-ананас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl8.jpg" alt="театр варакас ананас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl9.jpg" alt="театр варакаса ананаса"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl10.jpg" alt="анимация"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl11.jpg" alt="Варакас Ананас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl12.jpg" alt="Развлечения"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl13.jpg" alt="детские праздники"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl14.jpg" alt="детские утренники"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl15.jpg" alt="день рождения"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/owl16.jpg" alt="клоуны"></div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="large-12 columns">
                 <div class="owl-carousel owl-theme owl-animation" id="animated-thumbnials2">
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(1).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(2).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(3).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(4).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(5).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(6).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(7).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(8).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(9).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(10).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(11).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(12).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(13).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(14).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(15).jpg" alt=""></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(16).jpg" alt=""></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(1).jpg" alt="varakas-ananas"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(2).jpg" alt="Varakas Ananas"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(3).jpg" alt="ВаракасАнанас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(4).jpg" alt="Варакас Ананас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(5).jpg" alt="варакасананас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(6).jpg" alt="варакас-ананас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(7).jpg" alt="театр варакас ананас"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(8).jpg" alt="театр варакаса ананаса"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(9).jpg" alt="varakas ananas"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(10).jpg" alt="аниматоры в Минске"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(11).jpg" alt="клоуны в Минске"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(12).jpg" alt="утренники"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(13).jpg" alt="праздник"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(14).jpg" alt="аниматоры"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(15).jpg" alt="клоуны"></div>
+                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(16).jpg" alt="театр"></div>
                 </div>
             </div>
         </div>
