--- a/index.html
+++ b/index.html
@@ -262,44 +262,44 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="owl-carousel owl-theme" id="animated-thumbnials">
-                    <div class="item"><img class="owl-lazy" data-src="img/owl1.jpg" alt="varakas ananas"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl2.jpg" alt="varakas-ananas"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl3.jpg" alt="Varakas Ananas"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl4.jpg" alt="ВаракасАнанас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl5.jpg" alt="Новый Год"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl6.jpg" alt="варакасананас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl7.jpg" alt="варакас-ананас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl8.jpg" alt="театр варакас ананас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl9.jpg" alt="театр варакаса ананаса"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl10.jpg" alt="анимация"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl11.jpg" alt="Варакас Ананас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl12.jpg" alt="Развлечения"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl13.jpg" alt="детские праздники"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl14.jpg" alt="детские утренники"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl15.jpg" alt="день рождения"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/owl16.jpg" alt="клоуны"></div>
+                    <div class="item" data-src="img/owl1.jpg"><img class="owl-lazy" data-src="img/owl1.jpg" alt="varakas ananas"></div>
+                    <div class="item" data-src="img/owl2.jpg"><img class="owl-lazy" data-src="img/owl2.jpg" alt="varakas-ananas"></div>
+                    <div class="item" data-src="img/owl3.jpg"><img class="owl-lazy" data-src="img/owl3.jpg" alt="Varakas Ananas"></div>
+                    <div class="item" data-src="img/owl4.jpg"><img class="owl-lazy" data-src="img/owl4.jpg" alt="ВаракасАнанас"></div>
+                    <div class="item" data-src="img/owl5.jpg"><img class="owl-lazy" data-src="img/owl5.jpg" alt="Новый Год"></div>
+                    <div class="item" data-src="img/owl6.jpg"><img class="owl-lazy" data-src="img/owl6.jpg" alt="варакасананас"></div>
+                    <div class="item" data-src="img/owl7.jpg"><img class="owl-lazy" data-src="img/owl7.jpg" alt="варакас-ананас"></div>
+                    <div class="item" data-src="img/owl8.jpg"><img class="owl-lazy" data-src="img/owl8.jpg" alt="театр варакас ананас"></div>
+                    <div class="item" data-src="img/owl9.jpg"><img class="owl-lazy" data-src="img/owl9.jpg" alt="театр варакаса ананаса"></div>
+                    <div class="item" data-src="img/owl10.jpg"><img class="owl-lazy" data-src="img/owl10.jpg" alt="анимация"></div>
+                    <div class="item" data-src="img/owl11.jpg"><img class="owl-lazy" data-src="img/owl11.jpg" alt="Варакас Ананас"></div>
+                    <div class="item" data-src="img/owl12.jpg"><img class="owl-lazy" data-src="img/owl12.jpg" alt="Развлечения"></div>
+                    <div class="item" data-src="img/owl13.jpg"><img class="owl-lazy" data-src="img/owl13.jpg" alt="детские праздники"></div>
+                    <div class="item" data-src="img/owl14.jpg"><img class="owl-lazy" data-src="img/owl14.jpg" alt="детские утренники"></div>
+                    <div class="item" data-src="img/owl15.jpg"><img class="owl-lazy" data-src="img/owl15.jpg" alt="день рождения"></div>
+                    <div class="item" data-src="img/owl16.jpg"><img class="owl-lazy" data-src="img/owl16.jpg" alt="клоуны"></div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="large-12 columns">
                 <div class="owl-carousel owl-theme owl-animation" id="animated-thumbnials2">
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(1).jpg" alt="varakas-ananas"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(2).jpg" alt="Varakas Ananas"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(3).jpg" alt="ВаракасАнанас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(4).jpg" alt="Варакас Ананас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(5).jpg" alt="варакасананас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(6).jpg" alt="варакас-ананас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(7).jpg" alt="театр варакас ананас"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(8).jpg" alt="театр варакаса ананаса"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(9).jpg" alt="varakas ananas"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(10).jpg" alt="аниматоры в Минске"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(11).jpg" alt="клоуны в Минске"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(12).jpg" alt="утренники"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(13).jpg" alt="праздник"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(14).jpg" alt="аниматоры"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(15).jpg" alt="клоуны"></div>
-                    <div class="item"><img class="owl-lazy" data-src="img/belexpo/animation(16).jpg" alt="театр"></div>
+                    <div class="item" data-src="img/belexpo/animation(1).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(1).jpg" alt="varakas-ananas"></div>
+                    <div class="item" data-src="img/belexpo/animation(2).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(2).jpg" alt="Varakas Ananas"></div>
+                    <div class="item" data-src="img/belexpo/animation(3).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(3).jpg" alt="ВаракасАнанас"></div>
+                    <div class="item" data-src="img/belexpo/animation(4).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(4).jpg" alt="Варакас Ананас"></div>
+                    <div class="item" data-src="img/belexpo/animation(5).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(5).jpg" alt="варакасананас"></div>
+                    <div class="item" data-src="img/belexpo/animation(6).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(6).jpg" alt="варакас-ананас"></div>
+                    <div class="item" data-src="img/belexpo/animation(7).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(7).jpg" alt="театр варакас ананас"></div>
+                    <div class="item" data-src="img/belexpo/animation(8).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(8).jpg" alt="театр варакаса ананаса"></div>
+                    <div class="item" data-src="img/belexpo/animation(9).jpg"><img class="owl-lazy" data-src="img/belexpo/animation(9).jpg" alt="varakas ananas"></div>
+                    <div class="item" data-src="img/belexpo/animation(10).jpg" ><img class="owl-lazy" data-src="img/belexpo/animation(10).jpg" alt="аниматоры в Минске"></div>
+                    <div class="item" data-src="img/belexpo/animation(11).jpg" ><img class="owl-lazy" data-src="img/belexpo/animation(11).jpg" alt="клоуны в Минске"></div>
+                    <div class="item" data-src="img/belexpo/animation(12).jpg" ><img class="owl-lazy" data-src="img/belexpo/animation(12).jpg" alt="утренники"></div>
+                    <div class="item" data-src="img/belexpo/animation(13).jpg" ><img class="owl-lazy" data-src="img/belexpo/animation(13).jpg" alt="праздник"></div>
+                    <div class="item" data-src="img/belexpo/animation(14).jpg" ><img class="owl-lazy" data-src="img/belexpo/animation(14).jpg" alt="аниматоры"></div>
+                    <div class="item" data-src="img/belexpo/animation(15).jpg" ><img class="owl-lazy" data-src="img/belexpo/animation(15).jpg" alt="клоуны"></div>
+                    <div class="item" data-src="img/belexpo/animation(16).jpg" ><img class="owl-lazy" data-src="img/belexpo/animation(16).jpg" alt="театр"></div>
                 </div>
             </div>
         </div>
